k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-web-svc
spec:
  selector:
    app: flask-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: flask-web-port
  type: ClusterIP
